<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/WaypointConfiguration"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/Altitude"></TextView>

        <EditText
            android:id="@+id/altitude"
            android:layout_width="595dp"
            android:layout_height="wrap_content"
            android:hint="@string/alt_hint"
            android:inputType="number"
            android:text="@string/altitude_val"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gimbal"></TextView>

        <EditText
            android:id="@+id/pitch"
            android:layout_width="594dp"
            android:layout_height="wrap_content"
            android:hint="@string/pitch_hint"
            android:inputType="numberSigned"
            android:text="@string/gimbal2"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/ip"></TextView>

        <EditText
            android:id="@+id/ip"
            android:layout_width="595dp"
            android:layout_height="wrap_content"
            android:hint="@string/ip_hint"
            android:inputType="textUri"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Speed"></TextView>

        <RadioGroup
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checkedButton="@+id/HighSpeed"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lowSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Low" />

            <RadioButton
                android:id="@+id/MidSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mid" />

            <RadioButton
                android:id="@+id/HighSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/High" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ActionAfteFinished" />
        <RadioGroup
            android:id="@+id/actionAfterFinished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checkedButton="@+id/finishNone"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/finishNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/None"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/finishGoHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GoHome"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/finishAutoLanding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AutoLand"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/finishToFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BackTo1st"
                android:textSize="5pt" />
        </RadioGroup>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Heading" />
        <RadioGroup
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checkedButton="@+id/headingNext"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/headingNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Auto"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/headingInitDirec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Initial"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/headingRC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RCControl"
                android:textSize="5pt" />

            <RadioButton
                android:id="@+id/headingWP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UseWaypoint"
                android:textSize="5pt" />
        </RadioGroup>
    </LinearLayout>
    `

</LinearLayout>
